# offset_weight_equivalence

./: README.md  claim_number_sim.py  poisson_sim.py  poisson_tweedie_lightgbm.py  pyproject.toml  tweedie_possion_offset.py
docs/: nonlife_regression.tex  presentation.sty
scripts/: poisson_sim.py  poisson_tweedie_lightgbm.py  tweedie_poisson_offset_from_average.py  tweedie_sim.py
